# sphinx-extensions-catalog

./: .gitignore  .mise.toml  .textlintrc.json  README.md  Taskfile.dist.yaml  Taskfile.yaml  biome.jsonc  lefthook.yaml  package.json  pnpm-lock.yaml  pyproject.toml  template.rst
.github/workflows/: main.yml
content/: about-sample.rst  conf.py  index.rst  introduction.rst
content/add-directives/: index.rst  sphinx-nekochan.rst
content/extend-inout/: atsphinx-mini18n.rst  index.rst
content/others/: index.rst
drafts/: atsphinx-footnotes.rst  atsphinx-mini18n.rst  oembedpy.rst  sphinx-nekochan.rst  sphinx.ext.githubpages.rst
tools/: makepdf
